# WtApp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Utils/: Utils.h
approot/: fxtract.db  strings.xml  strings_nd.xml  templates.xml  wt_config.xml
dbdao/: CMakeLists.txt
dbdao/include/: BendFeatureDao.h  BendSequenceDao.h  FolderStructure.h  MaterialDao.h  ModelFileDao.h  ProcessPlanDao.h  ProjectDao.h  ToolDao.h  UserDao.h
dbdao/src/: BendFeatureDao.cpp  BendSequenceDao.cpp  FolderStructure.cpp  MaterialDao.cpp  ModelFileDao.cpp  ProcessPlanDao.cpp  ProjectDao.cpp  ToolDao.cpp  UserDao.cpp
docroot/: style.css
libSeqgen/: BendSeqGen.cpp  BendSeqGen.h  CMakeLists.txt  GA.cpp  GA.h  GaIndividual.cpp  GaIndividual.h  ProductionTime.cpp  ProductionTime.h  Sequence.cpp  Sequence.h
libSeqgen/src/: BendSequenceGenerator.cpp
libfxtract/: CMakeLists.txt
libfxtract/include/: Computation.h  IgesProcessor.h  MFace.h  Model.h  ModelApp.h  ModelBend.h  ModelEdge.h  ModelFace.h  ModelMath.h  ModelReader.h  ModelUtils.h  StepProcessor.h
libfxtract/include/cad-file-reader/: CadFileReader.h  CadFileReaderFactory.h  IgesFileReader.h  NullFileReader.h  StepFileReader.h
libfxtract/include/sheet-metal-component/: BoostSerializer.h  MFaceAbstract.h  ModelTypes.h  Point.h  SheetMetal.h  SheetMetalFeature.h
libfxtract/include/sheet-metal-component/bend/: BendFeature.h  BendLine.h  ModelBend.h
libfxtract/include/sheet-metal-component/edge/: ModelEdge.h
libfxtract/include/sheet-metal-component/face/: ModelFace.h
libfxtract/src/: Computation.cpp  IgesProcessor.cpp  MFace.cpp  Model.cpp  ModelApp.cpp  ModelBend.cpp  ModelEdge.cpp  ModelFace.cpp  ModelMath.cpp  ModelReader.cpp  ModelUtils.cpp  StepProcessor.cpp  important.txt  testing
libfxtract/src/cad-file-reader/: CadFileReaderFactory.cpp  IgesFileReader.cpp  StepFileReader.cpp
libfxtract/src/obj-file-reader/src/: readObj.cpp
libfxtract/src/sheet-metal-component/: BoostSerializer.cpp  MFaceAbstract.cpp  SheetMetal.cpp  SheetMetalFeature.cpp
libfxtract/src/sheet-metal-component/bend/: BendFeature.cpp  BendLine.cpp  ModelBend.cpp
libfxtract/src/sheet-metal-component/edge/: ModelEdge.cpp
libfxtract/src/sheet-metal-component/face/: ModelFace.cpp
libseqgen/include/: BendSequenceGenerator.h
libseqgen/src/: BendSequenceGenerator.cpp
logging/: CMakeLists.txt
logging/include/: FileSystemLogger.h  LoggingFacility.h  StandardOutputLogger.h
logging/src/: FileSystemLogger.cpp  StandardOutputLogger.cpp
model/: BendFeature.h  BendSequence.cpp  BendSequence.h  CMakeLists.txt  FxtUserDatabase.h  MachineParam.cpp  MachineParam.h  Material.cpp  Material.h  ModelFile.cpp  ModelFile.h  ProcessPlan.cpp  ProcessPlan.h  Project.cpp  Project.h  Session.cpp  Session.h  Tool.cpp  Tool.h  User.cpp
model/include/: BendFeature.h  BendSequence.h  Material.h  ModelFile.h  ProcessPlan.h  Project.h  ProjectDao.h  Session.h  Token.h  Tool.h  User.h
model/src/: BendFeature.cpp  BendSequence.cpp  FxtUserDatabase.cpp  MachineParam.cpp  Material.cpp  ModelFile.cpp  ProcessPlan.cpp  Project.cpp  ProjectDao.cpp  Session.cpp  Token.cpp  Tool.cpp  User.cpp
tests/: CMakeLists.txt
view/: BreadCrumbWidget.cpp  BreadCrumbWidget.h  CMakeLists.txt  FXtractUI.cpp  FXtractUI.h  FeatureDialog.cpp  FeatureDialog.h  FileDropApplication.cpp  FileDropApplication.h  ModelFileWidget.cpp  ModelFileWidget.h  ModelInfoPanels.cpp  ModelInfoPanels.h  ModelViewerControls.cpp  ModelViewerControls.h  ModelViewerWidget.cpp  ModelViewerWidget.h  NavBarWidget.cpp  PaintWidget.cpp  PanelList.cpp  ProcessPlanDialog.cpp  ProcessPlanDialog.h  ProjectList.cpp  ProjectList.h  ProjectListWidget.cpp  ProjectListWidget.h  ProjectSummaryWidget.cpp  ProjectSummaryWidget.h  readObj.h
view/include/: BreadCrumbWidget.h  ColorWidget.h  FXtractUI.h  FeatureDialog.h  FileDropApplication.h  ModelFileWidget.h  ModelInfoPanels.h  ModelViewerControls.h  ModelViewerWidget.h  NavBarWidget.h  PaintWidget.h  PanelList.h  ProcessPlanDialog.h  ProjectList.h  ProjectListWidget.h  ProjectSummaryWidget.h
view/src/: BreadCrumbWidget.cpp  ColorWidget.cpp  FXtractUI.cpp  FeatureDialog.cpp  FileDropApplication.cpp  ModelFileWidget.cpp  ModelInfoPanels.cpp  ModelViewerControls.cpp  ModelViewerWidget.cpp  NavBarWidget.cpp  PaintWidget.cpp  PanelList.cpp  ProcessPlanDialog.cpp  ProjectList.cpp  ProjectListWidget.cpp  ProjectSummaryWidget.cpp
